# claude-skill-check

./: .gitignore  CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/claude_skill_check/: __init__.py  cli.py  validator.py
tests/: test_validator.py
